More debugging messages

--- a/docker-custom/Dockerfile.bionic-custom
+++ b/docker-custom/Dockerfile.bionic-custom
@@ -25,6 +25,8 @@ COPY allure-docker-api $ROOT_DIR/allure-docker-api
 RUN pylint --rcfile=allure-docker-api/.pylintrc allure-docker-api
 
 ######
+RUN echo "hello world"
+
 FROM $ARCH/$JDK
 ARG ARCH
 ARG JDK
